--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
   <script src="/node_modules/jquery/dist/jquery.js"></script>
   <script src="/node_modules/semantic-ui-css/semantic.js"></script>
-
+  <script src="/node_modules/d3/d3.js"></script>
 </head>
 
 <body>
+
   <div id="react-app"></div>
 
   <script src="/dist/bundle.js"></script>
